--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ nav > span {
 
 main {
   padding: 60px 30px;
-  background-image: url(../R.png);
+  background-image: url(/static-page/R.png);
   background-repeat: no-repeat;
   background-position: right 70%;
   background-size: contain;
